--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <head>
     <meta charset="utf-8">
     <title>Abhishek Personal</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <img src="https://www.simpleimageresizer.com/_uploads/photos/643d7d6a/img1_17.jpg" alt="Profile picture">
-    <h1>Abhishek Sengupta</h1>
-    <p><em>College Student <strong>(2nd Year)</strong></em></p>
-    <p>I am a college Student currently pursuing CSE in B.tech from <a href="https://kiit.ac.in">KIIT</a> , aspiring to be a Web developer</p>
+    <table>
+        <tr>
+            <td><img src="imgs.jpg" alt="Profile picture"></td>
+            <td><h1>Abhishek Sengupta</h1>
+                <p><em>College Student <strong>(2nd Year)</strong></em></p>
+                <p>I am a college Student currently pursuing CSE in B.tech from <a href="https://kiit.ac.in">KIIT</a> , aspiring to be a Web developer</p>
+            </td>
+        </tr>
+    </table>
     <hr>
     <h3>Courses Completed so far</h3>
         <ul>
