--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -8,8 +8,33 @@
     </head>
     <body>
         <div class="top">
-            <h1><b>Welcome</b></h1>
+            <img src="images/cloud.png" class="cloud1">
+            <h1>Welcome</h1>
             <p>I'm Abhishek Sengupta</p>
+            <img src="images/cloud.png" class="cloud2">
+            <img src ="images/mountain.png" class="mountain">
+            
+        </div>
+
+        <div class="middle">
+            <img src="images/img2.png">
+                <p>I am a college Student currently pursuing CSE in B.tech from <a href="https://kiit.ac.in">KIIT</a> , aspiring to be a Web developer</p>
+        <h2>My Skills</h2>
+        
+            <p>App development<p>
+            <img src ="images/app.png">
+            <p><a href="https://coursera.org/share/9ea0b5a489806bf1355027a8954a65b4">Fundamentals of Web development</a></p>
+            <img src ="images/computer2.png">
+            <p><a href="https://coursera.org/share/eb679ed76b3103fe6a6f23eb0ce75534">Green screen in web development</a></p>
+            <img src="images/green.png">
+        </div>
+        <div class ="bottom">
+
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© Abhishek Sengupta.</p>
+
         </div>
 
     </body>
